[package]
name = "day5_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
zip = "0.6.6"
actix-web = "4.4.0"
actix = "0.13.1"
actix-files = "0.6.2"
futures = "0.3.29"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
base64 = "0.21.5"
